src/index.css
/* ... */
.plan-card .plan-info-section li .text {
    color: black;
}

.plan-card .plan-info-section li span .icon {
    width: 20px;
    height: 20px;
    margin-right: 5px;
}

.plan-card .plan-info-section li span article .edit-icon {
    margin-left: 5px;
    cursor: pointer;
    color: #00bbf9;
}

/*--------------- plan crud page ---------------------*/
.plan-crud-container .plan-card {
    margin-top: 30px;
}

.plan-crud-container h2 {
    font-weight: bold;
    color: #5FB51C;
    text-transform: uppercase;
    margin-top: 30px;
}

.plan-crud-container button {
    border: none;
    margin-top: 20px;
    width: 350px;
    font-weight: 500;
}

.plan-crud-container .error-msg {
    color: #ee0256;
}

.plan-crud-container .plan-card input {
    padding: 5px 5px;
    font-size: 15px;
    border: solid 2px rgb(219, 219, 219);
    border-radius: 20px;
}
.plan-crud-container .plan-card input:focus {
    outline: none;
    border: solid 2px #5FB51C;
}

.plan-crud-container .button-group {
    display: flex;
    flex-direction: row;
    max-width: 350px;
    margin: auto;
}

.plan-crud-container .button-group button:nth-child(2) {
    background-color: #000000;
    color: white;
}


@media (max-width: 320px) {
    .plan-crud-container h2 {
        font-size: 16px;
    }
    .plan-crud-container .plan-card {
        width: 100%;
    }
    .plan-crud-container .plan-card .image-container {
        width: 100%;
    }
    .plan-crud-container .plan-card .image-container img {
        width: 100%;
    }
}

@media (min-width: 321px) and (max-width: 767px){
    .plan-crud-container h2 {
        font-size: 20px;
        margin: 10px auto 5px;
    }
    .plan-crud-container .plan-card {
        width: 80%;
        height: 500px;
        margin-top: 0;
    }
    .plan-crud-container .plan-card .image-container {
        height: 40%;
        width: 100%;
    }
    .plan-crud-container .plan-card .image-container img {
        height: 100%;
    }
}

/*-------------------------------- Dash Board ------------------------*/
.dashboard-container {
    display: flex;
}

.dashboard-page {
    width: 100%;
}

.dashboard-page .dashboard-container {
    width: 100%;
}

.dashboard-container .newfeed-container {
    width: 75%;
    margin-left: 160px;
}

.dashboard-container .newfeed-container h2 {
    font-size: 20px;
    color: #6C6C6C;
    margin-left: -200px;
}

.dashboard-container .newfeed-container h2 .location-icon {
    color: #6C6C6C;
}

.dashboard-container .newfeed-container .plans-container {
    width: 100%;
}

.dashboard-container .newfeed-container .plans-container .plan-card .image-container img {
    width: 100%;
}

.dashboard-container .newfeed-container .plans-container .plan-card {
    margin-bottom: 20px;
    max-width: 650px;
}
.dashboard-container .newfeed-container .plans-container .plan-card:first-child {
    margin-top: 10px;
}

.dashboard-container aside {
    position: fixed;
    height: 100%;
    bottom: 0;
    right: 0;
    width: 25%;
}


.dashboard-container aside ul {
    padding-left: 0;
    list-style-type: none;
    overflow-y: scroll;
}

.dashboard-container aside ul h2 {
    font-size: 18px;
    color: #6C6C6C;
}

.dashboard-container aside li {
    padding: 10px 0;
    display: flex;
    margin-bottom: 20px;
}

.dashboard-container aside li div span{
    color: #FF3040;
}

.dashboard-container aside li:hover {
    background-color: #dddddd;
    cursor: pointer;
}

.dashboard-container aside .selected {
    background-color: #dddddd;
}

.dashboard-container aside li img {
    border-radius: 50%;
    margin-left: 20px;
    margin-right: 8px;
    max-height: 50px;
}

.dashboard-container aside li h2 {
    font-size: 14px;
    color: #000000;
    font-weight: bold;
    margin-bottom: 5px;
}

.dashboard-container aside li h3 {
    font-size: 12px;
    color: #7e818a;
    font-weight: normal;
}
@media (min-width: 768px) and (max-width: 1024px) {
    .dashboard-container .newfeed-container {
        margin-left: 250px;
    }
}
@media (max-width: 768px) {
    .dashboard-container .newfeed-container{
        margin: auto;
    }
    .dashboard-container aside {
        display: none;
    }
}

@media (max-width: 375px) {
    .dashboard-container .newfeed-container .plans-container .plan-card{
        font-size: 12px;
        width: 90%;
    }

    .dashboard-container .newfeed-container .plans-container .plan-card .name-button-section .name {
        font-size: 14px;
    }

    .dashboard-container .newfeed-container .plans-container .plan-card .name-button-section .message-button {
        font-size: 10px;
    }

    .dashboard-container .newfeed-container {
        width: 100%;
    }
}

/*----------------------------- Chat -----------------------*/
.chat-page .vertical-nav .nav-text {
    display: none;
}

.chat-page .vertical-nav h3 {
    display: none;
}

.chat-page .vertical-nav{
    width: 80px;
}

.chat-container {
    width: 93%;
    height: 100vh;
    background: #f6f6f6;
    /*margin-top: px;*/
    margin-left: 6%;
    overflow: hidden;
    border: 1px solid rgb(213, 213, 213);
    border-radius: 10px;
    display: flex;
}

.chat-container aside {
    width: 26%;
    height: 100%;
    background-color: #ffffff;
    font-size: 15px;
    vertical-align: top;
    border-right: solid 1px rgb(213, 213, 213);
}

.chat-container aside ul {
    padding-left: 0;
    margin: 0;
    list-style-type: none;
    overflow-y: scroll;
    height: 100%;
}

.chat-container aside ul h2 {
    text-align: start;
    margin-left: 30px;
}

.chat-container aside li {
    padding: 10px 0;
    display: flex;
    margin-bottom: 20px;
}

.chat-container aside li div span{
    color: #FF3040;
}

.chat-container aside li:hover {
    background-color: #dddddd;
    cursor: pointer;
}

.chat-container aside .selected {
    background-color: #dddddd;
}

.chat-container aside li img {
    border-radius: 50%;
    margin-left: 20px;
    margin-right: 8px;
    max-height: 50px;
}
/* ... */

